# onnx-simplifier

./: .gitignore  CMakeLists.txt  build_wasm.sh  pyproject.toml  setup.py
.github/workflows/: build-and-test.yml  rust.yml  sanitizer.yml  static.yml  windows-cross.yml
onnxsim/: contrib_schemas.cpp  contrib_schemas.h  cpp2py_export.cc  onnx_simplifier.py  onnxsim.cpp
onnxsim/capi/: onnxsim_c_api.cpp  onnxsim_c_api.h
onnxsim/tests/: test_python_api.py  test_simple.py
rust/: Cargo.toml  README.md
rust/onnxsim/: Cargo.toml
rust/onnxsim-sys/: Cargo.toml  build.rs
rust/onnxsim-sys/src/: lib.rs
rust/onnxsim/examples/: simplify.rs
rust/onnxsim/src/: lib.rs
rust/onnxsim/tests/: integration.rs
scripts/: leak.txt
scripts/cross/: build_windows_wheel.sh  find_python_early.cmake
tests/: test_backend.py  test_python_api.py  test_simple.py  test_timm.py
