[workspace]
resolver = "2"
members = ["onnxsim-sys", "onnxsim"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/onnxsim/onnxsim"
homepage = "https://github.com/onnxsim/onnxsim"
authors = ["ONNX Simplifier contributors"]
rust-version = "1.70"
