[package]
name = "onnxsim"
description = "Safe Rust bindings to the ONNX Simplifier (onnxsim): constant-folding and graph simplification for ONNX models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
categories = ["api-bindings", "science"]
keywords = ["onnx", "onnxsim", "simplifier", "machine-learning", "inference"]

[dependencies]
onnxsim-sys = { path = "../onnxsim-sys", version = "0.1.0" }

[package.metadata.docs.rs]
# docs.rs cannot build the native ONNX Runtime stack; skip it and just render docs.
rustc-args = []
rustdoc-args = []
